# benchmark-bmb

./: LICENSE  README.md
.github/workflows/: benchmark.yml
benches/compute/binary_trees/bmb/: main.bmb
benches/compute/binary_trees/c/: main.c
benches/compute/binary_trees/rust/: main.rs
benches/compute/fannkuch/bmb/: main.bmb
benches/compute/fannkuch/rust/: main.rs
benches/compute/fibonacci/bmb/: main.bmb
benches/compute/fibonacci/c/: main.c
benches/compute/fibonacci/rust/: main.rs
benches/compute/mandelbrot/bmb/: main_fp.bmb
benches/compute/mandelbrot/rust/: main.rs
benches/compute/n_body/bmb/: main.bmb
benches/compute/n_body/c/: main.c
benches/compute/n_body/rust/: main.rs
benches/compute/spectral_norm/rust/: main.rs
benches/contract/aliasing/rust/: main.rs
benches/contract/bounds_check/bmb/: main.bmb
benches/contract/bounds_check/c/: main.c
benches/contract/bounds_check/rust/: main.rs
benches/contract/null_check/rust/: main.rs
benches/contract/purity_opt/rust/: main.rs
benches/real_world/json_parse/rust/: main.rs
benches/real_world/sorting/rust/: main.rs
results/: 2026-01-08_rust_vs_bmb.md  2026-01-09_v0.34.x_f64_intrinsics.md
runner/: Cargo.toml
runner/src/: main.rs
