[package]
name = "benchmark-bmb"
version = "0.1.0"
edition = "2021"
description = "BMB Language Benchmark Runner"
license = "MIT"

[[bin]]
name = "benchmark-bmb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
colored = "2.0"
walkdir = "2.4"
which = "5.0"
